@@ -23,6 +23,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Richard Brown
   Armado Martinez
   A M
+  asmyers
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
@@ -51,3 +52,4 @@ suggestions:
   Jan Stolarek
   Yury Videneev
   Bodo Graumann
+  Lynoure
